--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
     "bootstrap": "^3.3.7",
     "angular": "^1.6.1",
     "angular-route": "^1.6.1",
-    "angular-mocks": "^1.6.1"
+    "angular-mocks": "^1.6.1",
+    "font-awesome": "^4.7.0"
   }
 }
