--- a/package.json
+++ b/package.json
@@ -13,11 +13,18 @@
   "devDependencies": {
     "aliv": "^1.4.1",
     "bower": "^1.8.0",
+    "del": "^2.2.2",
+    "gulp": "^3.9.1",
+    "gulp-cssmin": "^0.1.7",
+    "gulp-htmlmin": "^3.0.0",
+    "gulp-rev-append": "^0.1.7",
+    "gulp-uglify": "^2.0.0",
     "jasmine": "^2.5.2",
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-coverage": "^1.1.1",
     "karma-firefox-launcher": "^1.0.0",
-    "karma-jasmine": "^1.1.0"
+    "karma-jasmine": "^1.1.0",
+    "run-sequence": "^1.2.2"
   }
 }
