Novos ajustes PSP + Libs.

--- a/.alivrc
+++ b/.alivrc
@@ -2,5 +2,6 @@
     "quiet": true,
     "pathIndex": "/app/",
     "host": "calculadora-dev.alterdata.com.br",
-    "secure": true
+    "secure": true,
+    "noBrowser": true
 }
