--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,7 @@
     "font-awesome": "^4.7.0",
     "alt-ambiente-url": "^0.0.2",
     "alt-passaporte-listagem-produtos": "^0.0.7",
-    "alt-passaporte-informacoes-autorizacao": "^0.0.4"
+    "alt-passaporte-informacoes-autorizacao": "^0.0.4",
+    "alt-passaporte-usuario-logado": "^0.0.1"
   }
 }
