--- a/bower.json
+++ b/bower.json
@@ -21,6 +21,10 @@
     "alt-ambiente-url": "^0.0.2",
     "alt-passaporte-listagem-produtos": "^0.0.7",
     "alt-passaporte-informacoes-autorizacao": "^0.0.4",
-    "alt-passaporte-usuario-logado": "^0.0.1"
+    "alt-passaporte-usuario-logado": "^0.0.1",
+    "alt-alerta-flutuante": "^0.0.9"
+  },
+  "resolutions": {
+    "angular": "^1.6.1"
   }
 }
