--- a/bower.json
+++ b/bower.json
@@ -14,9 +14,9 @@
   ],
   "dependencies": {
     "bootstrap": "^3.3.7",
-    "angular": "^1.6.1",
-    "angular-route": "^1.6.1",
-    "angular-mocks": "^1.6.1",
+    "angular": "~1.4.8",
+    "angular-route": "~1.4.8",
+    "angular-mocks": "~1.4.8",
     "font-awesome": "^4.7.0",
     "alt-ambiente-url": "^0.0.2",
     "alt-passaporte-listagem-produtos": "^0.0.7",
@@ -25,6 +25,6 @@
     "alt-alerta-flutuante": "^0.0.9"
   },
   "resolutions": {
-    "angular": "^1.6.1"
+    "angular": "~1.4.8"
   }
 }
