--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "aliv",
     "test": "karma start",
-    "p": "protractor conf.js"
+    "p": "protractor protractor.conf.js"
   },
   "keywords": [],
   "author": "",
