--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,8 @@
     "alt-passaporte-listagem-produtos": "^0.0.7",
     "alt-passaporte-informacoes-autorizacao": "^0.0.4",
     "alt-passaporte-usuario-logado": "^0.0.1",
-    "alt-alerta-flutuante": "^0.0.9"
+    "alt-alerta-flutuante": "^0.0.9",
+    "alt-modal-service": "^0.0.1"
   },
   "resolutions": {
     "angular": "~1.4.8"
