--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "aliv": "^1.4.1",
+    "aliv": "^1.6.0",
+    "babel": "^6.5.2",
+    "babel-preset-es2015": "^6.22.0",
+    "babili": "0.0.11",
     "bower": "^1.8.0",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
     "gulp-cssmin": "^0.1.7",
     "gulp-htmlmin": "^3.0.0",
+    "gulp-nginclude": "^0.4.8",
     "gulp-rev-append": "^0.1.7",
     "gulp-uglify": "^2.0.0",
     "jasmine": "^2.5.2",
